--- a/FSNet.ipynb
+++ b/FSNet.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torchvision.models as models\n",
     "import torchvision\n",
+    "import torchvision.models as models\n",
+    "import torchvision.transforms as transforms\n",
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,10 +55,9 @@
     "        assert out_channels == self.K, f'invalid filter num, K={self.K}, out_channels={out_channels}'\n",
     "        \n",
     "\n",
-    "        self.FS = nn.Parameter(nn.init.kaiming_normal_(torch.zeros((self.C, self.K1*self.x, self.K2*self.y))))\n",
-    "        self.FS.requires_grad = True\n",
+    "        self.FS = nn.Parameter(nn.init.kaiming_normal_(torch.zeros((self.C, self.K1*self.x, self.K2*self.y)))).cuda()\n",
     "        \n",
-    "        self.grad_index = torch.zeros((self.FS.size()[0]*2, self.FS.size()[1]*2, self.FS.size()[2]*2))\n",
+    "        self.grad_index = torch.zeros((self.FS.size()[0]*2, self.FS.size()[1]*2, self.FS.size()[2]*2)).cuda()\n",
     "        \n",
     "        self.conv_real = nn.Conv2d(in_channels=self.C, \n",
     "                                   out_channels=self.K, \n",
@@ -66,7 +66,7 @@
     "                                   padding=conv_pad,\n",
     "                                   groups=conv_groups,\n",
     "                                   dilation=conv_dilation,\n",
-    "                                   bias=False)\n",
+    "                                   bias=False).cuda()\n",
     "        \n",
     "        self.backward_hook_handle = self.conv_real.register_backward_hook(self.backward_hook)\n",
     "        \n",
@@ -82,7 +82,8 @@
     "        \"\"\"\n",
     "        input: (N, C, H, W)\n",
     "        \"\"\"\n",
-    "        conv_weight = torch.zeros((self.K1*self.K2*self.K3, self.C, self.S1, self.S2))\n",
+    "        self.grad_index = torch.zeros((self.FS.size()[0]*2, self.FS.size()[1]*2, self.FS.size()[2]*2)).cuda()\n",
+    "        conv_weight = torch.zeros((self.K1*self.K2*self.K3, self.C, self.S1, self.S2)).cuda()\n",
     "        combinations = [(i, j, k) for i in range(self.K1) \n",
     "                        for j in range(self.K2) \n",
     "                        for k in range(self.K3)]\n",
@@ -103,7 +104,7 @@
     "        self.grad_index[:, :, :w//2] += self.grad_index[:, :, w//2:]\n",
     "        self.grad_index = self.grad_index[:c//2, :h//2, :w//2]\n",
     "        \n",
-    "        self.conv_real.weight = nn.Parameter(conv_weight, requires_grad=True)\n",
+    "        self.conv_real.weight = nn.Parameter(conv_weight.cuda(), requires_grad=True)\n",
     "        \n",
     "        return self.conv_real(input)\n",
     "    \n",
@@ -111,7 +112,7 @@
     "        '''\n",
     "        grad_input[1] is the grad of weight of conv_real\n",
     "        '''\n",
-    "        grad_extend = torch.zeros((self.FS.size()[0]*2, self.FS.size()[1]*2, self.FS.size()[2]*2))\n",
+    "        grad_extend = torch.zeros((self.FS.size()[0]*2, self.FS.size()[1]*2, self.FS.size()[2]*2)).cuda()\n",
     "        for i, grad in enumerate(grad_input[1]):\n",
     "            k1 = i%self.K1\n",
     "            k2 = (i // self.K1) % self.K2\n",
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,115 +342,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fsnet18 = make_fsnet(18)"
+    "fsnet18 = make_fsnet(18).cuda()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ResNet(\n",
-       "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
-       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (relu): ReLU(inplace)\n",
-       "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
-       "  (layer1): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (layer2): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (downsample): Sequential(\n",
-       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (layer3): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (downsample): Sequential(\n",
-       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (layer4): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (downsample): Sequential(\n",
-       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace)\n",
-       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
-       "  (fc): Linear(in_features=512, out_features=1000, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
     }
    ],
    "source": [
-    "resnet18 = models.resnet18()\n",
-    "resnet18"
+    "transform = transforms.Compose([\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(\n",
+    "            mean=[0.485, 0.456, 0.406],\n",
+    "            std=[0.229, 0.224, 0.225],\n",
+    "        )\n",
+    "    ])\n",
+    "\n",
+    "\n",
+    "trainset = torchvision.datasets.CIFAR10(root='/data/unagi0/kamata', train=True,\n",
+    "                                        download=True, transform=transform)\n",
+    "train_bsize = 128\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=128, shuffle=True, num_workers=2)\n",
+    "\n",
+    "test_bsize = 100\n",
+    "testset = torchvision.datasets.CIFAR10(root='/data/unagi0/kamata', train=False,download=True, transform=transform)\n",
+    "testloader = torch.utils.data.DataLoader(testset, batch_size=100,shuffle=False, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.SGD(fsnet18.parameters(), lr=0.1, momentum=0.9)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "max_epoch = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-95-e34e651aebac>, line 25)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-95-e34e651aebac>\"\u001b[0;36m, line \u001b[0;32m25\u001b[0m\n\u001b[0;31m    if >= test_max_i - 1:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(max_epoch):\n",
+    "    '''train'''\n",
+    "    fsnet18 = fsnet18.train()\n",
+    "    train_loss_per_epoch = 0\n",
+    "    for i, data in enumerate(trainloader):\n",
+    "        if i >= train_max_i - 1:\n",
+    "            break\n",
+    "        inputs, labels = data\n",
+    "        inputs = inputs.cuda()\n",
+    "        labels = labels.cuda()\n",
+    "        inputs.requires_grad_()\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = fsnet18(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        train_loss_per_epoch += loss.cpu().numpy() \n",
+    "        optimizer.step()\n",
+    "    train_loss_per_epoch /= len(trainloader)\n",
+    "    \n",
+    "    '''test'''\n",
+    "    fsnet18 = fsnet18.eval()\n",
+    "    test_loss_per_epoch = 0\n",
+    "    for i, data in enumerate(testloader):\n",
+    "        inputs, labels = data\n",
+    "        inputs = inputs.cuda()\n",
+    "        labels = labels.cuda()\n",
+    "        \n",
+    "        outputs = fsnet18(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        test_loss_per_epoch += loss.cpu().numpy()\n",
+    "    test_loss_per_epoch /= len(testloader)"
    ]
   },
   {
@@ -476,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
